Added discovery client

--- a/appsettings.json
+++ b/appsettings.json
@@ -13,6 +13,11 @@
       "password": "password",
       "database":  "cf_workshop"
     }
+  },
+  "spring": {
+    "application": {
+      "name": "cfworkshop"
+    }
   }
 
 }
