--- a/CfWorkshopDotNetCore.csproj
+++ b/CfWorkshopDotNetCore.csproj
@@ -15,8 +15,9 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.BrowserLink" Version="1.1.2" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="1.1.1" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="1.1.2" />
-    <PackageReference Include="Steeltoe.CloudFoundry.Connector.MySql" Version="1.0.1" />
-    <PackageReference Include="Steeltoe.Extensions.Configuration.CloudFoundry" Version="1.0.1" />
+    <PackageReference Include="Steeltoe.CloudFoundry.Connector.MySql" Version="1.1.0" />
+    <PackageReference Include="Steeltoe.Extensions.Configuration.CloudFoundry" Version="1.1.1" />
+    <PackageReference Include="Pivotal.Discovery.Client" Version="1.1.0" />
   </ItemGroup>
 
   <ItemGroup>
